--- a/discovery.yml
+++ b/discovery.yml
@@ -4,8 +4,14 @@ server:
 eureka:
   instance:
     hostname: localhost
+    leaseRenewalInterval: 10
+    leaseExperationDurationinSecond: 20
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+    healthcheck:
+          enabled: true
+        lease:
+          duration: 50
